--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -324,20 +324,20 @@
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   ##   ex: urls = ["https://us-west-2-1.aws.cloud2.influxdata.com"]
-  urls = ["http://127.0.0.1:8086"]
-
+  urls = ["https://us-east-1-1.aws.cloud2.influxdata.com/"]
+  
   ## Local address to bind when connecting to the server
   ## If empty or not set, the local address is automatically chosen.
   # local_address = ""
 
   ## Token for authentication.
-  token = ""
+  token = "${INFLUXDB_TOKEN}"
 
   ## Organization is the name of the organization you wish to write to.
-  organization = ""
+  organization = "dd7895c825a7c36a"
 
   ## Destination bucket to write into.
-  bucket = ""
+  bucket = "machine_monitoring"
 
   ## The value of this tag will be used to determine the bucket.  If this
   ## tag is not set the 'bucket' option is used as the default.
@@ -1594,13 +1594,11 @@
   ##   example: servers = ["tcp://localhost:1883"]
   ##            servers = ["ssl://localhost:1883"]
   ##            servers = ["ws://localhost:1883"]
-  servers = ["tcp://127.0.0.1:1883"]
+  servers = ["mqtt://broker.hivemq.com:1883"]
 
   ## Topics that will be subscribed to.
   topics = [
-    "telegraf/host01/cpu",
-    "telegraf/+/mem",
-    "sensors/#",
+"test_fan"
   ]
 
   ## The message topic will be stored in a tag specified by this value.  If set
