--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,15 @@
-aiohttp==3.8.5
-anywidget==0.9.13
-AppKit==0.2.8
-asgiref==3.8.1
-atheris==2.3.0
-beautifulsoup4==4.11.1
-dask==2022.7.0
-ipykernel==6.29.5
-ipython==8.12.3
-ipywidgets==8.1.2
 matplotlib==3.7.0
-modin==0.32.0
-multiprocess==0.70.17
 paho-mqtt==2.1.0
-pickle5==0.0.12
-polars==1.9.0
-pyodide==0.0.2
 pyOpenSSL==24.2.1
-pyperf==2.8.0
-PyQt4==4.11.4
-PyQt5==5.15.11
-PyQt6==6.7.1
-PySide6==6.8.0.1
-pytest==7.1.2
 python-dotenv==1.0.1
-python_calamine==0.2.3
-pyxlsb==1.0.10
-PyYAML==6.0
-PyYAML==6.0.2
-QtPy==2.2.0
-scipy==1.10.0
-statsmodels==0.13.5
-thread==2.0.5
+gradio==4.44.1
+gradio_client==1.3.0
+huggingface-hub==0.25.2
+Jinja2==3.1.4
+numpy==2.0.2
+pandas==2.2.3
+plotly==5.24.1
+requests==2.32.3
+scipy==1.13.1
+urllib3==2.2.3
+influxdb-client==1.46.0
