--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1612,16 +1612,16 @@
   ##
   ## When using a QoS of 1 or 2, you should enable persistent_session to allow
   ## resuming unacknowledged messages.
-  # qos = 0
+  qos = 2
 
   ## Connection timeout for initial connection in seconds
-  # connection_timeout = "30s"
+  connection_timeout = "30s"
 
   ## Interval and ping timeout for keep-alive messages
   ## The sum of those options defines when a connection loss is detected.
   ## Note: The keep-alive interval needs to be greater or equal one second and
   ## fractions of a second are not supported.
-  # keepalive = "60s"
+  keepalive = "60s"
   # ping_timeout = "10s"
 
   ## Max undelivered messages
